# detloclcheck

./: .gitignore  .gitlab-ci.yml  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  .rstcheck.cfg  CITATION.cff  README.md  create_doc  pyproject.toml  yaml2script.py
compatibility/: load_detloclcheck.m
docs/: conf.py  index.rst  module_detloclcheck.rst  script_detloclcheck.rst
src/detloclcheck/: __init__.py
src/detloclcheck/create_checkerboard_image/: __init__.py  checkerboard_image_class.py  create_checkerboard_image.py
src/detloclcheck/create_coordinate_system/: __init__.py  create_coordinate_system.py
src/detloclcheck/detect_localize_checkerboard/: __init__.py  detect_localize_checkerboard.py
src/detloclcheck/find_checkerboard/: __init__.py  array2image.py  calculatetemplatematching.py  create_template.py  find_checkerboard.py  parallel_cornersubpix.py  parallelfind4quadcornersubpix.py  set_black_border.py
src/detloclcheck/scripts/: __init__.py  detloclcheck.py  detloclcheck_find_checkerboard.py
src/detloclcheck/tools/: __init__.py  array2image.py  calculate_sharpness.py  calculate_square_distances.py  draw_coordinate_system.py  filter_blurry_corners.py  normed_tm_ccorr_normed.py
tests/: checkerboard_image_class.py  detect_localize_checkerboard.py  main.py  scripts_detloclcheck_check_arg_file.py
