[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DetLocLCheck"
version = "2024.7.9"
authors = [{name="Daniel Mohr", email="daniel.mohr@uni-greifswald.de"}]
description = "`DetLocLCheck` is a software tool for Detection and Localization of a Checkerboard calibration target containing L shape marker using template matching."
keywords=["calibration target", "checkerboard", "detection", "localization",
          "marker", "L shape marker ", "template matching"]
readme = "README.md"

requires-python = ">=3.10"

dependencies = ["numpy"]
# dependencies = ["opencv-python", "numpy"]

[project.license]
file = "LICENSE.md"
name = "LGPL-3.0-or-later"

[project.scripts]
detloclcheck = "detloclcheck.scripts.detloclcheck:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]
docs = ["sphinx", "sphinx-argparse"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["F401"]
